package behavioral.observer;

import behavioral.observer.interfaces.Observer;
import behavioral.observer.interfaces.Subject;
import java.util.ArrayList;
import java.util.List;

public class ConcreteSubject implements Subject {

  private List<Observer> observers;

  public ConcreteSubject() {
    this.observers = new ArrayList<>();
  }

  @Override
  public void registerObserver(Observer o) {
    observers.add(o);
  }

  @Override
  public void removeObserver(Observer o) {
    observers.remove(o);
  }

  @Override
  public void notifyObservers() {
    for (Observer observer : observers) {
      observer.update();
    }
  }
}
