package behavioral.observer.interfaces;

public interface Observer {
  void update();
}
