@startuml observer
interface Subject {
    void registerObserver(Observer o);
    void removeObserver(Observer o);
    void notifyObservers();
}

interface Observer {
    void update();
}

class ConcreteSubject {
  - List<Observer> observers
    void registerObserver(Observer o);
    void removeObserver(Observer o);
    void notifyObservers();
}

class ConcreteObserver {
    void update();
}

Subject <|-- ConcreteSubject
Observer <|-- ConcreteObserver
ConcreteSubject *-right-> Observer

@enduml